--- a/board/pine64/rockpro64/genimage.cfg
+++ b/board/pine64/rockpro64/genimage.cfg
@@ -1,3 +1,12 @@
+# GigaDevice Dual/Quad 16 Megabyte SPI flash
+# Model: GD25Q127CSIG
+# PCB label: U2
+flash nor-16M-256 {
+	pebsize = 4K
+	numpebs = 4K
+	minimum-io-unit-size = 256
+}
+
 image boot.vfat {
 	vfat {
 		files = {
