vale: Rename vocabulary list to abcd
Signed-off-by: Philip Molloy <philip@philipmolloy.com>

--- a/.vale.ini
+++ b/.vale.ini
@@ -2,7 +2,7 @@ StylesPath = ci/vale/styles
 
 MinAlertLevel = error
 
-Vocab = linuxbootchain
+Vocab = abcd
 
 Packages = RedHat, proselint, alex, Joblint, write-good
 
